# nebula_sensor

./: .gitignore  CMakeLists.txt  README.md  prj.conf
src/: aes-main-test.c  aes_gcm.c  aes_gcm.h  data.h  main.c  main_backup.c  sensor_logic.c  sensor_logic.h
